Actually fix the full-bleed container padding

--- a/src/scss/transplant/layout/_content.scss
+++ b/src/scss/transplant/layout/_content.scss
@@ -45,10 +45,6 @@
                     padding: 0;
                     &.full {
                         @include container(full);
-                        padding: 0 5%;
-                        &.bleed {
-                            padding: 0;
-                        }
                     }
                 }
             }
